Modularize page builds Add tests Needs documentation and comments Needs a slightly more comprehensive initial app (maybe a directive, a route and some mock data in the scope)

--- a/app/templates/src/main/www/index.html
+++ b/app/templates/src/main/www/index.html
@@ -1,7 +1,7 @@
-<html ng-app>
+<html ng-app="index">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="libs/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="dist/index.css" />
 </head>
 
@@ -10,7 +10,7 @@
 	<div class="container" ng-include="'partials/welcome.html'"></div>
 
 	<script src="dist/vendor.js"></script>
-	<script src="dist/app.js"></script>
+	<script src="dist/index.js"></script>
 </body>
 
 </html>
