Flesh out the basic template

--- a/app/templates/src/main/www/partials/nav.html
+++ b/app/templates/src/main/www/partials/nav.html
@@ -7,15 +7,16 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="#">Your Application</a>
+		<a class="navbar-brand" href="#">Untethered</a>
 	</div>
 
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		<ul class="nav navbar-nav">
-			<li class="dropdown">
+			<li class="dropdown nav-selector">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					<span class="app-toggle glyphicon glyphicon-chevron-down"></span>
+					<span class="glyphicon glyphicon-chevron-down"></span>
+                    <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
 					<li>
